--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@ h1 { color: #ff6600; }
 Desde Sol Naranja Ediciones te acompañamos paso a paso
 para ingresar a la docencia con capacitaciones y asesoría.
 </p>
-
-<a class="btn" href="https://instagram.com/solnaranjaediciones" target="_blank">
-Seguinos en Instagram
-</a>
+<a class="btn" href="" target="_blank">
+Seguinos en Instagram https://www.instagram.com/cursos_puntaje_docente
+</a>https://wa.me/5492235298968
 
 </body>
 </html>
