--- a/index.html
+++ b/index.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sol Naranja Ediciones - Quiero Ser Docente</title>
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background: #fff;
-    color: #333;
-    text-align: center;
-    padding: 20px;
-}
-h1 { color: #ff6600; }
-.btn {
-    display: block;
-    margin: 10px auto;
-    padding: 12px;
-    background: #ff6600;
-    color: white;
-    text-decoration: none;
-    border-radius: 8px;
-    width: 90%;
-    max-width: 300px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Sol Naranja Ediciones – Quiero ser docente</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fff6ec;
+      color: #333;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #ff6600;
+    }
+
+    .boton {
+      display: block;
+      margin: 12px auto;
+      padding: 14px;
+      background: #ff6600;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      width: 90%;
+      max-width: 400px;
+      font-weight: bold;
+    }
+  </style>
 </head>
+
 <body>
 
-<h1>Sol Naranja Ediciones</h1>
-<h2>Quiero ser Docente</h2>
+  <h1>🍊 Sol Naranja Ediciones</h1>
+  <p>Capacitaciones con puntaje<br>
+     Acompañamiento real para docentes</p>
 
-<p>¿Cuándo querés comenzar a trabajar?</p>
-<a class="btn" href="#2026">Este año (2026)</a>
-<a class="btn" href="#2027">El próximo (2027)</a>
+  <a class="boton" href="#">
+    📘 Quiero ser docente
+  </a>
 
-<p>¿Terminaste el profesorado?</p>
-<a class="btn" href="#si">Sí</a>
-<a class="btn" href="#no">No</a>
+  <a class="boton" href="https://instagram.com/cursos_puntaje_docente">
+    📸 Instagram
+  </a>
 
-<h3 id="2026">📌 Ciclo Lectivo 2026</h3>
-<p>Podés participar en Actos Públicos Digitales y listados disponibles.</p>
-
-<h3 id="2027">📌 Ciclo Lectivo 2027</h3>
-<p>Planificá tu inscripción con anticipación.</p>
-
-<p>
-Desde Sol Naranja Ediciones te acompañamos paso a paso
-para ingresar a la docencia con capacitaciones y asesoría.
-</p>
-<a class="btn" href="" target="_blank">
-Seguinos en Instagram https://www.instagram.com/cursos_puntaje_docente
-</a>https://wa.me/5492235298968
-
-</body>
-</html>
+  <a class="boton" href="https://wa.me/5492235298968">
+    📲 WhatsApp
+  </a>
