--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     📘 Quiero ser docente
   </a>
 
-  <a class="boton" href="https://instagram.com/cursos_puntaje_docente">
-    📸 Instagram
+  <a class="boton" href="https://instagram.com/cursos_puntaje_docente/"
+   target="_blank">
+Instagram 📸 Instagram
   </a>
 
   <a class="boton" href="https://wa.me/5492235298968">
