--- a/quiero-ser-docente.html
+++ b/quiero-ser-docente.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Quiero ser docente – Sol Naranja</title>
+<style>
+body {
+font-family: Arial, sans-serif;
+background: #fff7f0;
+text-align: center;
+padding: 40px;
+}
+button {
+display: block;
+margin: 15px auto;
+padding: 15px;
+width: 90%;
+max-width: 400px;
+font-size: 16px;
+border: none;
+border-radius: 8px;
+background: #ff7a18;
+color: white;
+}
+</style>
+</head>
 
+<body>
+
+<h2 id="pregunta">¿Querés trabajar como docente?</h2>
+
+<div id="opciones">
+<button onclick="respuesta1()">Sí</button>
+<button onclick="respuestaNo()">No</button>
+</div>
+
+<script>
+function respuesta1() {
+document.getElementById("pregunta").innerText =
+"¿Ya estás inscripto en el sistema educativo?";
+document.getElementById("opciones").innerHTML = `
+<button onclick="final()">Sí</button>
+<button onclick="final()">No</button>
+`;
+}
+
+function respuestaNo() {
+document.getElementById("pregunta").innerText =
+"Este espacio es para quienes quieren ejercer la docencia.";
+document.getElementById("opciones").innerHTML = "";
+}
+
+function final() {
+window.location.href = "https://wa.me/5492235298968";
+}
+</script>
+
+</body>
+</html>
