--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <p>Capacitaciones con puntaje<br>
      Acompañamiento real para docentes</p>
 
-  <a class="boton" href="#">
+  <a class="boton" href="quiero-ser-docente.html">
     📘 Quiero ser docente
   </a>
 
